--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,14 @@ body{
     margin: 0;
     padding: 0;
     background: #262626;
+    color: #FFFFFF;
+    font-family: 'Arizonia';
 }
 .wrapper h1{
     text-align: center;
     font-size: 40px;
-    font-family: 'Arizonia';
-    color: #FFFFFF;
+    
+   
 }
 
 .img-area{
@@ -39,13 +41,46 @@ body{
 }
 
 .single-img:hover img{
-  transform: scale(1.1);
+  transform: scale(1.2);
 }
-/* 
-.single-img, .box .imgBox{
-    position: relative;
+.single-img .details{
+    position: absolute;
+    top: 10px;
+    left:10px;
+    bottom: 10px;
+    right: 10px;
+    background: rgba(0, 0, 0, 0.7);
+    transform: scaleY(0);
+    transition: transform .5s;
+}
+.single-img .details .content {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    /* padding: 15px; */
+    color: #FFFFFF;
+    width: 100%;
+    height: 100%;
 }
 
-.single-img, .box .imgBox img{
-    max-width: 100%;
-} */
+.single-img .details .content h2{
+    margin: 0;
+    padding: 0;
+    font-size: 30px;
+    color: #ff0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.single-img:hover .details{
+    transform: scaleY(1);
+}
+
+button{
+    background-color: DodgerBlue;
+    border: none;
+    color: white;
+    padding: 12px 16px;
+    font-size: 16px;
+    cursor: pointer;
+}
