--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,7 @@ a{
     box-shadow: 0 20px 50px rgba(0,0,0,.5);
     overflow: hidden;
     font-weight: 600;
+    background: #220372;
   }
   a::before{
     content: "";
@@ -196,4 +197,51 @@ a{
     }
     
   }
+
+  .spinImage {
+    animation-name: fade, shrink;
+    animation-duration: 0.5s, 0.53s;
+    animation-direction: alternate, alternate;
+  }
   
+  @keyframes fade {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+@keyframes shrink {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(0);
+    }
+}
+
+.normalImage {
+    animation-name: fade, shrink;
+    animation-duration: 0.5s, 0.53s;
+    animation-direction: alternate, alternate;
+  }
+  
+  @keyframes fade {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes shrink {
+    from {
+        transform: scale(0);
+    }
+    to {
+        transform: scale(1);
+    }
+}
