Updated the latest changes

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body{
     width: 200px;
     height: 200px;
     margin: 5px;
-    background: #FFFFFF;
+    background: #ffc107b3;
 
     overflow: hidden;
 }
